--- a/mainpage.dox
+++ b/mainpage.dox
@@ -238,7 +238,7 @@
 *
 * @section autoren Autoren
 *
-* - Ayoub Bouda  
+* - Christian Duku, Ayoub Bouda, Meriem Mansour, Douaa Boukbib Touhir, Marukh Shabbir
 * - Studiengang: Wirtschaftsinformatik / Informatik  
 * - Frankfurt University of Applied Sciences  
 * - Modul: Betriebssysteme und Rechnernetze  
